test/expected/error_multibyte_column.out
[CompoundList]
  [CompoundListCondition, None]
    [Assign a=€]
  [CompoundListCondition, None]
    [SimpleCommand "doesnotexist_xyz*"]
[Word
  Unquoted "a=€"
]
[Word
  Unquoted "doesnotexist_xyz*"
]
shit: 3:1: error: A glob pattern in command position is rarely intended as a command name.
     3 |  doesnotexist_xyz*
       |  ^~~~~~~~~~~~~~~~~ here.
note: Quote it to run a literal name, or list the matches with compgen -G.
